MLE-29124 MLE-29125: Fix Polaris Unwritten Field and Useless Call